--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/geo": "^3.0.54",
     "@aws-amplify/ui-react": "^6.1.13",
-    "aws-amplify": "^6.4.0",
+    "aws-amplify": "^6.6.7",
+    "maplibre-gl": "^2.4.0",
+    "maplibre-gl-js-amplify": "^4.0.1",
     "next": "^14.2.16",
     "react": "^18",
     "react-dom": "^18"
