--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "aws-cdk-lib": "^2",
     "constructs": "^10.3.0",
     "esbuild": "^0.23.1",
+    "tailwindcss": "^3.4.14",
     "tsx": "^4.19.0",
     "typescript": "^5.6.2"
   }
