--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@aws-amplify/geo": "^3.0.54",
     "@aws-amplify/ui-react": "^6.1.13",
+    "@types/googlemaps": "^3.43.3",
     "aws-amplify": "^6.6.7",
     "maplibre-gl": "^2.4.0",
     "maplibre-gl-js-amplify": "^4.0.1",
     "next": "^14.2.16",
+    "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18"
   },
